Project/p4/tests/t070.err
Semantic error on line 4: Invalid left operand for operator '/'.
Semantic error on line 5: Invalid right operand for operator '/'.
Semantic error on line 6: Invalid left operand for operator '/'.
