Project/p4/tests/t070.gpl
int a = 1;
string s = "hello";

int j = s/a;
double x = a/s;
double y = s/a;
